<resources>

    <string name="main_capture_camera_failed">未找到相机或相机不可用</string>
    <string name="main_capture_decode_failed">未找到二维码</string>
    <string name="main_cart_empty">购物车还没有商品噢~</string>
    <string name="main_cart_shopping">去逛逛</string>
    <string name="main_recommend_for_you">为您推荐</string>
    <string name="main_cart">购物车</string>
    <string name="main_me_center">个人中心</string>
    <string name="main_text_search_goods">搜索您喜欢的商品</string>
    <string name="main_home">首页</string>
    <string name="main_category">分类</string>
    <string name="main_shop_center">购物中心</string>
    <string name="main_no_address">没有地址信息，请点击后添加地址</string>
    <string name="main_pay">去支付</string>
    <string name="main_balance_count">合计：%s</string>
    <string name="main_add_address">+添加地址</string>
    <string name="main_address_user_name">收货人姓名</string>
    <string name="main_address_user_phone">手机号码</string>
    <string name="main_address_area">所在地区</string>
    <string name="main_address_street">街道地址</string>
    <string name="main_address_post_code">邮政编码</string>
    <string name="main_address_set_default">设为默认地址</string>
    <string name="main_title_new_address">新增地址</string>
    <string name="main_search_hot">热门搜索</string>
    <string name="main_search_history">历史记录</string>
    <string name="main_price">价格</string>
    <string name="main_sales_volume">销量</string>
    <string name="main_my_order">我的订单</string>
    <string name="main_my_card">我的卡券</string>
    <string name="main_all_order">全部订单</string>
    <string name="main_recommend_user_name">您是由【%s】推荐</string>
    <string name="main_order_money">订单金额</string>
    <string name="main_order_no">订单编号</string>
    <string name="main_order_address">收货地址</string>
    <string name="main_add_cart">加入购物车</string>
    <string name="main_buy_now">立即购买</string>
    <string name="main_buy_count">购买数量</string>
    <string name="main_remaining_count">剩余%s件</string>
    <string name="main_recommend_goods">推荐商品</string>
    <string name="main_goods_details">商品详情</string>
    <string name="main_balance_coupon">优惠券/优惠码</string>
    <string name="main_delivery_way">配送方式</string>
    <string name="main_invoice_type">发票类型</string>
    <string name="main_customer_message">买家留言</string>
    <string name="main_hint_customer_message">请填写内容需与商家协商并确认，45字以内</string>
    <string name="main_balance_goods_price">商品总价</string>
    <string name="main_balance_freight">运费</string>
    <string name="main_confirm_message">确认信息</string>
    <string name="main_order_freight_text">(含运费￥%s)</string>
    <string name="main_publish_comment">发表评价</string>
    <string name="main_publish">发布</string>
    <string name="main_hint_comment">质量好吗？给其他小伙伴一个参考呗</string>
    <string name="main_order_delete">删除订单</string>
    <string name="main_order_query_express">查询物流</string>
    <string name="main_thank_comment">感谢评价</string>
    <string name="main_after_sales">退款/售后</string>
    <string name="main_to_details">查看详情</string>
    <string name="main_refund_amount">退款金额</string>
    <string name="main_refund_time">退款时间</string>
    <string name="main_refund_succeed">退款成功</string>
    <string name="main_shop_name">店铺名称</string>
    <string name="main_refund_type">退款类型</string>
    <string name="main_refund_reason">退款原因</string>
    <string name="main_refund_explain">退款说明</string>
    <string name="main_refund_code">退款编号</string>
    <string name="main_refund_apply_time">申请时间</string>
    <string name="main_flash_sales">限时购</string>
    <string name="main_daily_new">每日上新</string>
    <string name="main_flash_buy">抢购</string>
    <string name="main_selected">已选</string>
    <string name="main_product_details_express">配送</string>
    <string name="main_explain">说明</string>

    <string-array name="main_order_status_text_list">
        <item>全部订单</item>
        <item>待付款</item>
        <item>待发货</item>
        <item>待收货</item>
        <item>待评价</item>
    </string-array>

    <string-array name="main_order_status_list">
        <item>待付款</item>
        <item>待发货</item>
        <item>待收货</item>
        <item>待评价</item>
        <item>退款/售后</item>
    </string-array>

    <string-array name="main_my_card_list">
        <item>优惠券</item>
        <item>兑换券/礼品</item>
        <item>红包</item>
        <item>会员卡</item>
    </string-array>

    <string-array name="main_mall_index_list">
        <item>首页</item>
        <item>拼团</item>
        <item>竞拍</item>
        <item>限时购</item>
    </string-array>

    <array name="main_order_status_icon_list">
        <item>@mipmap/ic_me_wait_pay</item>
        <item>@mipmap/ic_me_to_be_shipped</item>
        <item>@mipmap/ic_me_to_be_received</item>
        <item>@mipmap/ic_me_waiting_parity</item>
        <item>@mipmap/ic_me_after_sale</item>
    </array>

    <array name="main_card_icon_list">
        <item>@mipmap/ic_me_card1</item>
        <item>@mipmap/ic_me_card2</item>
        <item>@mipmap/ic_me_card3</item>
        <item>@mipmap/ic_me_card4</item>
    </array>

</resources>
