<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/item_home"
        android:icon="@mipmap/common_ic_launcher_round"
        android:title="@string/main_home"/>
    <item
        android:id="@+id/item_category"
        android:icon="@mipmap/common_ic_launcher"
        android:title="@string/main_category"/>
    <item
        android:id="@+id/item_shop_center"
        android:icon="@mipmap/common_ic_launcher_round"
        android:title="@string/main_shop_center"/>
    <item
        android:id="@+id/item_cart"
        android:icon="@mipmap/common_ic_launcher"
        android:title="@string/main_cart"/>
    <item
        android:id="@+id/item_me"
        android:icon="@mipmap/common_ic_launcher_round"
        android:title="@string/main_me_center"/>

</menu>