<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/widgets_product_details_bar"
    android:layout_width="match_parent"
    android:layout_height="@dimen/main_product_details_bottom_bar_height"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/widgets_product_details_shop_tv"
        android:layout_width="54dp"
        android:layout_height="match_parent"
        android:drawableTop="@mipmap/ic_bot_home_n"
        android:gravity="center"
        android:paddingTop="@dimen/tiny"
        android:text="店铺"/>

    <TextView
        android:id="@+id/widgets_product_details_collect_tv"
        android:layout_width="54dp"
        android:layout_height="match_parent"
        android:drawableTop="@mipmap/ic_star_zero"
        android:gravity="center"
        android:paddingTop="@dimen/tiny"
        android:text="收藏"/>

    <TextView
        android:id="@+id/widgets_product_details_cart_tv"
        android:layout_width="54dp"
        android:layout_height="match_parent"
        android:drawableTop="@mipmap/ic_bot_cart_n"
        android:gravity="center"
        android:paddingTop="@dimen/tiny"
        android:text="@string/main_cart"/>

    <TextView
        android:id="@+id/widgets_product_details_add_cart_tv"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@android:color/holo_orange_light"
        android:gravity="center"
        android:text="@string/main_add_cart"
        android:textColor="@color/white"
        android:textSize="@dimen/font_middle"/>

    <TextView
        android:id="@+id/widgets_product_details_add_buy_tv"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@android:color/holo_red_light"
        android:gravity="center"
        android:text="@string/main_buy_now"
        android:textColor="@color/white"
        android:textSize="@dimen/font_middle"/>
</LinearLayout>
