<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <LinearLayout
        android:id="@+id/pay_result_layout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/middle">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="@dimen/middle"
            android:src="@mipmap/ic_launcher_round"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="支付成功"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="可在我的订单中查看"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/pay_result_layout1"
        android:layout_marginTop="@dimen/middle"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="@dimen/middle">

        <com.linsr.common.gui.widgets.common_label_container
            android:layout_width="match_parent"
            android:layout_height="32dp"
            app:common_label_text="@string/main_order_money"
            app:common_show_bottom_inner_divider="false"/>

        <com.linsr.common.gui.widgets.common_label_container
            android:layout_width="match_parent"
            android:layout_height="32dp"
            app:common_label_text="@string/main_order_no"
            app:common_show_bottom_inner_divider="false"/>

        <com.linsr.common.gui.widgets.common_label_container
            android:layout_width="match_parent"
            android:layout_height="32dp"
            app:common_label_text="@string/main_order_address"
            app:common_show_bottom_inner_divider="false"/>
    </LinearLayout>


</RelativeLayout>