<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/item_order_root"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <View style="@style/common_divider_horizontal"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/item_order_shop_name_tv"
            style="@style/TextView"
            android:padding="@dimen/small"
            android:text="店铺名称"/>

        <TextView
            android:id="@+id/item_order_status_tv"
            style="@style/TextView"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:padding="@dimen/small"
            android:text="未收货"
            android:textColor="@color/main_color"
            android:textSize="@dimen/font_small"/>
    </RelativeLayout>

    <View style="@style/common_divider_horizontal"/>

    <LinearLayout
        android:id="@+id/item_order_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"/>

    <TextView
        android:id="@+id/item_order_goods_total_tv"
        style="@style/TextView"
        android:layout_gravity="end"
        android:layout_marginLeft="@dimen/small"
        android:layout_marginRight="@dimen/small"
        android:layout_marginTop="@dimen/mini"
        tools:text="共0件商品，总金额 ￥0.00"/>

    <TextView
        android:id="@+id/item_order_goods_freight_tv"
        style="@style/TextView"
        android:layout_gravity="end"
        android:layout_marginBottom="@dimen/mini"
        android:layout_marginLeft="@dimen/small"
        android:layout_marginRight="@dimen/small"
        android:layout_marginTop="@dimen/mini"
        tools:text="@string/main_order_freight_text"/>

    <View style="@style/common_divider_horizontal"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/small">

        <TextView
            android:id="@+id/item_order_tips_tv"
            style="@style/TextView"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/item_order_btn_layout"
            android:text="1小时候订单关闭"
            android:textColor="@color/text_primary_weak"
            android:textSize="@dimen/font_small"/>

        <LinearLayout
            android:id="@id/item_order_btn_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:divider="@drawable/spacer_medium"
            android:orientation="horizontal"
            android:showDividers="middle">

            <TextView
                android:id="@+id/item_order_btn_1"
                style="@style/main_order_item_btn"
                android:background="@drawable/bg_stroke_btn"
                android:paddingLeft="@dimen/middle"
                android:text="@string/main_order_delete"/>

            <TextView
                android:id="@+id/item_order_btn_2"
                style="@style/main_order_item_btn"
                android:background="@drawable/bg_stroke_btn"
                android:paddingLeft="@dimen/middle"
                android:text="@string/main_order_query_express"/>

            <TextView
                android:id="@+id/item_order_btn_3"
                style="@style/main_order_item_btn"
                android:background="@drawable/bg_main_btn_selector"
                android:paddingLeft="@dimen/middle"
                android:text="@string/main_pay"
                android:textColor="@color/white"/>

        </LinearLayout>

    </RelativeLayout>

    <View style="@style/common_divider_horizontal"/>
</LinearLayout>